--- a/.github/workflows/oracle-db-duplicate.yml
+++ b/.github/workflows/oracle-db-duplicate.yml
@@ -106,7 +106,6 @@ jobs:
           else
             echo "SlackChannel=delius-aws-oracle-dev-alerts" >> $GITHUB_OUTPUT
           fi
-          [[ "${{ github.event.inputs.TargetEnvironment }}" =~ ^.*(-dev|-test)$ ]] && echo "SkipStep=yes" >> $GITHUB_OUTPUT || "SkipStep=no" >> $GITHUB_OUTPUT
 
       - name: Check Restore DateTime Input
         if: ${{ github.event.inputs.RestoreDateTime != '' }}
@@ -142,7 +141,6 @@ jobs:
           isDateInvalid '${{ github.event.inputs.RestoreDateTime }}'
 
       - name: Checkout hmpps-delius-operation-automation
-        if: ${{ env.SkipStep == 'no' }}
         uses: actions/checkout@v4
         with:
           sparse-checkout-cone-mode: false
@@ -159,7 +157,6 @@ jobs:
           fetch-depth: 0
 
       - name: Checkout modernisation-platform-configuration-management
-        if: ${{ env.SkipStep == 'no' }}
         uses: actions/checkout@v4
         with:
           repository: ministryofjustice/modernisation-platform-configuration-management
@@ -172,7 +169,6 @@ jobs:
           fetch-depth: 0
 
       - name: Checkout Ansible Required Roles From modernisation-platform-configuration-management
-        if: ${{ env.SkipStep == 'no' }}
         uses: actions/checkout@v4
         with:
           repository: ministryofjustice/modernisation-platform-configuration-management
@@ -185,7 +181,6 @@ jobs:
           fetch-depth: 0
 
       - name: Configure AWS Credentials
-        if: ${{ env.SkipStep == 'no' }}
         id: login-aws
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -194,7 +189,6 @@ jobs:
           aws-region: "eu-west-2"
 
       - name: Start Ansible Oracle RMAN Pre Duplicate
-        if: ${{ env.SkipStep == 'no' }}
         shell: bash
         run: |
           export ANSIBLE_CONFIG=$ansible_config
@@ -247,15 +241,20 @@ jobs:
           role-session-name: "hmpps-delius-operational-automation-${{ github.run_number }}"
           aws-region: "eu-west-2"
 
-      # - name: Start Ansible Oracle RMAN Duplicate
-      #   shell: bash
-      #   run: |
-      #     if [[ ${{ env.s3_source_bucket }} 
-      #     export ANSIBLE_CONFIG=$ansible_config
-      #     $ansible_playbook_directory/rman-duplicate.yml -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} -i $inventory \
-      #     -e duplicate_target=${{ needs.oracle-rman-pre-duplicate.outputs.DuplicateTarget }} \
-      #     -e source_db=${{ github.event.inputs.SourceDb }} \
-      #     -e s3_source_bucket=${{ if github.event.inputs.S3SourceBucket }} 
+      - name: Start Ansible Oracle RMAN Duplicate
+        shell: bash
+        run: |
+          # Only pass extra variables source_db and s3_source_bucket if NOT duplicating from AWS legacy
+          # These variables shall be picked up from Ansible Inventory
+          if [[ ! "${{ github.event.inputs.TargetEnvironment }}" =~ ^.*(-dev|-test)$ ]]
+          then
+            extra_vars="-e source_db=${{ github.event.inputs.SourceDb }} -e s3_source_bucket=${{ github.event.inputs.S3SourceBucket }}"
+          else
+            extra_vars=""
+          fi
+          export ANSIBLE_CONFIG=$ansible_config
+          echo "$ansible_playbook_directory/rman-duplicate.yml -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} -i $inventory \
+          -e duplicate_target=${{ needs.oracle-rman-pre-duplicate.outputs.DuplicateTarget }} ${extra_vars}"
 
   slack-notification:
     if: ${{ failure() }}
