--- a/.github/workflows/oracle-db-backup.yml
+++ b/.github/workflows/oracle-db-backup.yml
@@ -199,9 +199,9 @@ jobs:
             STATUS=$(aws ssm get-parameter --region ${AWS_REGION} --name "$StatusParameter" --query "Parameter.Value" --output text 2>&1) || true
             [[ $STATUS =~ ParameterNotFound ]] && STATUS="Initial"
             echo "Backup Status: $STATUS"
-            [[ $STATUS == "Running" ]] && echo "Backup is already running on this host.  Multiple concurrent runs are not allowed." && exit 1
+            [[ $STATUS =~ ^Running ]] && echo "Backup is already running on this host.  Multiple concurrent runs are not allowed." && exit 1
             aws ssm put-parameter --region ${AWS_REGION} --name "$StatusParameter" --type String --overwrite \
-                --value "Running" --description "Runtime status for RMAN backups running on the $RmanTarget host" \
+                --value "Running - Initializing" --description "Runtime status for RMAN backups running on the $RmanTarget host" \
                 
       - name: Start Ansible Backup On Primary
         id: backup
