Exit on purpose

--- a/.github/workflows/oracle-db-duplicate.yml
+++ b/.github/workflows/oracle-db-duplicate.yml
@@ -268,6 +268,7 @@ jobs:
           export ANSIBLE_CONFIG=$ansible_config
           echo "$ansible_playbook_directory/rman-duplicate.yml -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} -i $inventory \
           -e duplicate_target=${{ needs.oracle-rman-pre-duplicate.outputs.DuplicateTarget }} ${extra_vars}"
+          exit 1
 
   slack-notification:
     if: ${{ failure() }}
