--- a/playbooks/oracle_duplicate/rman-duplicate.yml
+++ b/playbooks/oracle_duplicate/rman-duplicate.yml
@@ -124,7 +124,7 @@
 
       - name: Generate Command to Run RMAN Script
         set_fact:
-           run_rman_script: "/home/oracle/admin/rman_scripts/rman_duplicate.sh -d {{ database_primary_sid}} -s {{ source_db }} -c {{ catalog }} {{ local_disk_backup | default() }} {{ rman_datetime_option | default() }} {{ ssm_parameter_option|default() }} \"{{ spfile_parameters_option|default()|trim }}\""
+           run_rman_script: "/home/oracle/admin/rman_scripts/rman_duplicate.sh -d {{ database_primary_sid}} -s {{ source_db }} -c \"{{ catalog }}\" {{ local_disk_backup | default() }} {{ rman_datetime_option | default() }} {{ ssm_parameter_option|default() }} \"{{ spfile_parameters_option|default()|trim }}\""
 
       - name: Show Script to Run
         debug:
