--- a/playbooks/oracle_backup/backup.yml
+++ b/playbooks/oracle_backup/backup.yml
@@ -62,10 +62,10 @@
             catalog_options: "-n Y -c {{ catalog }}"
           when: (catalog is defined)
 
-        - name: Set SSM Status Parameter Prefix to use for update of status flags when variable is not null
+        - name: Set SSM Parameter used for Runtime details when variable is not null
           set_fact:
-             ssm_parameter: "-s {{ ssm_parameter_prefix }}"
-          when: (ssm_parameter_prefix is defined)
+             ssm_parameter_path: "-s \"{{ ssm_parameter }}\""
+          when: (ssm_parameter is defined)
 
         - name: Set backup duration target when variable is not null
           set_fact:
@@ -138,7 +138,7 @@
 
         - name: Create RMAN Command
           set_fact:
-            rman_command: "/home/oracle/admin/rman_scripts/rman_backup.sh -d {{ database_primary_sid | default(database_standby_sid) }} -g {{ database_global_database }} {{ rman_options }} {{ ssm_parameter | default() }} {{ duration_options|default() }} {{ uncompress_options|default() }} {{ catalog_options|default() }} {{ enable_trace_flag|default() }}"
+            rman_command: "/home/oracle/admin/rman_scripts/rman_backup.sh -d {{ database_primary_sid | default(database_standby_sid) }} -g {{ database_global_database }} {{ rman_options }} {{ ssm_parameter_path | default() }} {{ duration_options|default() }} {{ uncompress_options|default() }} {{ catalog_options|default() }} {{ enable_trace_flag|default() }}"
 
         - name: Show RMAN Command
           debug:
