--- a/.github/workflows/oracle-db-backup.yml
+++ b/.github/workflows/oracle-db-backup.yml
@@ -203,7 +203,7 @@ jobs:
             # Initialize the Backup Status for this RMAN Backup Target
             [[ $PHASE =~ ^Inactive ]] && echo "Backup is already active on this host.  Multiple concurrent runs are not allowed." && exit 1
             aws ssm put-parameter --region ${AWS_REGION} --name "$SSMParameter" --type String --overwrite \
-                --value "{\"Phase\":\"Backup\",\"Status\":\"Initializing\",\"Message\",\"Running on $RmanTarget\"}" --description "Runtime phase and status details of RMAN backups running on the $RmanTarget host"
+                --value "{\"Phase\":\"Backup\",\"Status\":\"Initializing\":\"Message\",\"Running on $RmanTarget\"}" --description "Runtime phase and status details of RMAN backups running on the $RmanTarget host"
 
       - name: Start Ansible Backup On Primary
         id: backup
