--- a/.github/workflows/oracle-db-backup.yml
+++ b/.github/workflows/oracle-db-backup.yml
@@ -144,6 +144,7 @@ jobs:
       EnableTrace: "${{ github.event_name == 'workflow_dispatch' && github.event.inputs.EnableTrace || 'no' }}"
       VerboseOutput: "${{ github.event_name == 'workflow_dispatch' && github.event.inputs.VerboseOutput || '' }}"
       RmanTarget: "${{needs.build_rman_target_name.outputs.RmanTarget}}"
+      TargetEnvironment: "${{needs.build_rman_target_name.outputs.TargetEnvironment}}"
       SSMParameter: "/oracle-backups/${{needs.build_rman_target_name.outputs.RmanTarget}}"
       ansible_config: operations/playbooks/ansible.cfg
     continue-on-error: false
@@ -197,13 +198,14 @@ jobs:
         shell: bash
         run: |
             RUNTIME=$(aws ssm get-parameter --region ${AWS_REGION} --name "$SSMParameter" --query "Parameter.Value" --output text 2>&1) || true
-            [[ $RUNTIME =~ ParameterNotFound ]] && RUNTIME="{\"Phase\":\"Inactive\",\"Status\":\"Inactive\",\"Message\":\"Runtime not initialized\"}"
+            [[ $RUNTIME =~ ParameterNotFound ]] && RUNTIME="{\"Phase\":\"Inactive\",\"Status\":\"Inactive\",\"Message\":\"Runtime not initialized\",\"TargetEnvironment\":\"\",\"RmanTarget\":\"\"}"
             PHASE=$(echo $RUNTIME | jq -r '.Phase')
             echo "Backup Phase: $PHASE"
             # Initialize the Backup Status for this RMAN Backup Target
             [[ ! $PHASE =~ ^Inactive ]] && echo "Backup is already active on this host.  Multiple concurrent runs are not allowed." && exit 1
             aws ssm put-parameter --region ${AWS_REGION} --name "$SSMParameter" --type String --overwrite \
-                --value "{\"Phase\":\"Backup\",\"Status\":\"Initializing\",\"Message\":\"Running on $RmanTarget\"}" --description "Runtime phase and status details of RMAN backups running on the $RmanTarget host"
+                --value "{\"Phase\":\"Backup\",\"Status\":\"Initializing\",\"Message\":\"Running on $RmanTarget\",\"TargetEnvironment\":\"$TargetEnvironment\",\"RmanTarget\":\"$RmanTarget\"}" \
+                --description "Runtime phase and status details of RMAN backups running on the $RmanTarget host"
 
       - name: Start Ansible Backup On Primary
         id: backup
