--- a/.github/workflows/oracle-db-duplicate.yml
+++ b/.github/workflows/oracle-db-duplicate.yml
@@ -295,6 +295,7 @@ jobs:
             playbooks/cfo_extract
             playbooks/alfresco_wallet
             playbooks/oracle_statspack
+            common/*
             playbooks/ansible.cfg
           path: operations
           ref: ${{ github.event.inputs.SourceCodeVersion }}
