--- a/.github/workflows/oracle-db-aws-snapshot.yml
+++ b/.github/workflows/oracle-db-aws-snapshot.yml
@@ -87,7 +87,7 @@ jobs:
     name: oracle-aws-snapshot
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.1
+      image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
     environment: ${{ github.event.inputs.TargetEnvironment }}
     timeout-minutes: 1440
     continue-on-error: false
@@ -150,6 +150,6 @@ jobs:
       - name: Start Ansible Oracle AWS Snapshot
         run: |
           export ANSIBLE_CONFIG=$ansible_config
-          $command -i $inventory \
+          $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
           -e target_host=${{ steps.preparetargetnames.outputs.TargetHost }} \
           -e delete_after_days=${{ github.event.inputs.DeleteAfterDays }} ${{ github.event.inputs.Verbose }}
