--- a/.github/workflows/oracle-db-oem-password-rotation.yml
+++ b/.github/workflows/oracle-db-oem-password-rotation.yml
@@ -89,7 +89,7 @@ jobs:
     environment: ${{ github.event.inputs.TargetOemEnvironment}}
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.1
+      image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
     timeout-minutes: 1440
     continue-on-error: false
     steps:
@@ -148,7 +148,7 @@ jobs:
         run: |
           export ANSIBLE_CONFIG=$ansible_config
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_password_rotation/roles
-          $command -i $inventory \
+          $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
           -e oem_target=${{ steps.prepareoemtargethost.outputs.TargetOemHost }} \
           -e environment_name=${{ github.event.inputs.TargetEnvironmentName }}  \
           -e target_environment_name=${{ github.event.inputs.TargetEnvironmentName }} \
