--- a/.github/workflows/oracle-db-remove-orphan-backups.yml
+++ b/.github/workflows/oracle-db-remove-orphan-backups.yml
@@ -52,7 +52,7 @@ jobs:
     environment: ${{ github.event.inputs.TargetEnvironment }}
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.1
+      image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
     timeout-minutes: 1440
     continue-on-error: false
     steps:
@@ -108,4 +108,4 @@ jobs:
         run: |
           export ANSIBLE_CONFIG=$ansible_config
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_remove_orphan_backups/roles
-          $command -i $inventory -e hosts=${{ steps.preparetargetname.outputs.TargetHost }} ${{ github.event.inputs.VerboseOutput }}
+          $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} -e hosts=${{ steps.preparetargetname.outputs.TargetHost }} ${{ github.event.inputs.VerboseOutput }}
