--- a/.github/workflows/oracle-db-statspack-setup.yml
+++ b/.github/workflows/oracle-db-statspack-setup.yml
@@ -48,7 +48,7 @@ jobs:
     environment: ${{ github.event.inputs.TargetEnvironment }}
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.1
+      image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
     timeout-minutes: 1440
     continue-on-error: false
     steps:
@@ -92,5 +92,5 @@ jobs:
       - name: Run Statspack Setup Playbook
         run: |
           export ANSIBLE_CONFIG=$ansible_config
-          $command -i $inventory \
+          $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
           -e target_hosts=${{ steps.prepareinventorynames.outputs.hosts }}
