--- a/.github/workflows/oracle-db-support-awr-reports.yml
+++ b/.github/workflows/oracle-db-support-awr-reports.yml
@@ -40,7 +40,7 @@ jobs:
     environment: ${{ github.event.inputs.TargetEnvironment }}
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.1
+      image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
     timeout-minutes: 1440
     continue-on-error: false
     steps:
@@ -86,4 +86,4 @@ jobs:
       - name: Start Ansible AWR Support Reports
         run: |
           export ANSIBLE_CONFIG=$ansible_config
-          $command -i $inventory -e target_hosts=${{ steps.prepareinventoryname.outputs.target_hosts }}
+          $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} -e target_hosts=${{ steps.prepareinventoryname.outputs.target_hosts }}
